--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -3,25 +3,33 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
-<div class="container">
-    <form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    {% if app.user %}
+        <div>
+            {{ app.user.username }}
+            <a href="{{ path('fos_user_security_logout') }}">
+                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+            </a>
+        </div>
+    {% else %}
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <div class="container">
+            <form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-        <label class="sr-only" for="username">{{ 'security.login.username'|trans }}</label>
-        <input class="form-control" placeholder="Username or Email" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+                <label class="sr-only" for="username">{{ 'security.login.username'|trans }}</label>
+                <input class="form-control" placeholder="Username or Email" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-        <label class="sr-only" for="password">{{ 'security.login.password'|trans }}</label>
+                <label class="sr-only" for="password">{{ 'security.login.password'|trans }}</label>
 
-        <input class="form-control" placeholder="Password" type="password" id="password" name="_password" required="required" />
+                <input class="form-control" placeholder="Password" type="password" id="password" name="_password" required="required" />
 
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
-        <input class="btn btn-lg btn-primary btn-block" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-    </form>
-</div>
+                <input class="btn btn-lg btn-primary btn-block" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+            </form>
+        </div>
+    {% endif %}
 {% endblock fos_user_content %}
