--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -1,31 +1,9 @@
-{% if (app.user.roles is defined) and (is_granted("ROLE_HALLGATO")) %}
-    {% for menu in menus %}
-        {% for role in menu.role %}
-            {% if role == "null" or role == "ROLE_HALLGATO "%}
-                <a href="{{ path(menu.link) }}">
-                    {{ menu.name }}
-                </a>
-            {% endif %}
-        {% endfor  %}
-    {% endfor %}
-{% elseif is_granted("ROLE_OKTATO") %}
-    {% for menu in menus %}
-        {% for role in menu.role %}
-            {% if role == "null" or role == "ROLE_OKTATO" %}
-                <a href="{{ path(menu.link) }}">
-                    {{ menu.name }}
-                </a>
-            {% endif %}
-        {% endfor  %}
-    {% endfor %}
-{% else %}
-    {% for menu in menus %}
-        {% for role in menu.role %}
-            {% if role == "null" %}
-                <a href="{{ path(menu.link) }}">
-                    {{ menu.name }}
-                </a>
-            {% endif %}
-        {% endfor  %}
-    {% endfor %}
-{% endif %}
+{% for menu in menus %}
+    {% for role in menu.role %}
+        {% if role == "null" or role == is_granted(role) %}
+            <a href="{{ path(menu.link) }}">
+                {{ menu.name }}
+            </a>
+        {% endif %}
+    {% endfor  %}
+{% endfor %}
