--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -5,7 +5,14 @@
         {{ render(controller("AppBundle:Menu:menu"),{ 'max': 1 }) }}
     </div>
     <div id="login">
-        {{ render(controller("FOSUserBundle:Security:login"),{ 'max': 1 }) }}
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            Hello {{ app.user.username }}!
+            <a href="{{ path('fos_user_security_logout') }}">
+                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+            </a>
+        {% else %}
+            <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+        {% endif %}
     </div>
     {% block content %}{% endblock %}
 {% endblock %}
