--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,13 +1,16 @@
-<div>
-    {% block fos_user_content %}
-        {% if app.request.hasPreviousSession %}
-            {% for type, messages in app.session.flashbag.all() %}
-                {% for message in messages %}
-                    <div class="flash-{{ type }}">
-                        {{ message }}
-                    </div>
+{% extends '::layout.html.twig' %}
+{% block content %}
+    <div>
+        {% block fos_user_content %}
+            {% if app.request.hasPreviousSession %}
+                {% for type, messages in app.session.flashbag.all() %}
+                    {% for message in messages %}
+                        <div class="flash-{{ type }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
-        {% endif %}
-    {% endblock fos_user_content %}
-</div>
+            {% endif %}
+        {% endblock fos_user_content %}
+    </div>
+{% endblock %}
